# semiconductor_vol_control

./: =4.2.0  README.md  credentials.json  requirements.txt
Notebooks/: NB01_Get_Data.ipynb  NB02.1_Backtest_1.ipynb  NB02.2_Backtest_2.ipynb
Transit Fantasy/: Caracas Metro.html  Greater Toronto Transit.kml  Greater Toronto Transit.kmz  LA Metro 2040.kml  LA Rail Network.kml  Los Angeles Metro Bus Fantasy Map.kml  Transit LA – Google My Maps.html
Transit Fantasy/Caracas Metro – Google My Maps_files/: 1532-bus_4x.png&highlight=ff000000,000000,ff000000&scale=2.0  1626-metro_4x.png&highlight=ff000000,000000,ff000000&scale=2.0  RotateCookiesPage.html  ViewportInfoService(1).GetViewportInfo  ViewportInfoService(2).GetViewportInfo  ViewportInfoService(3).GetViewportInfo  ViewportInfoService(4).GetViewportInfo  ViewportInfoService.GetViewportInfo  app.html  edit.html  js  kh  kh(1)  kh(10)  kh(11)  kh(12)  kh(13)  kh(14)  kh(15)  kh(16)  kh(17)  kh(18)  kh(19)  kh(2)  kh(20)  kh(21)  kh(22)  kh(23)  kh(24)  kh(25)  kh(26)  kh(27)  kh(3)  kh(4)  kh(5)  kh(6)  kh(7)  kh(8)  kh(9)  m=_b,_tp  (+39 more)
Transit Fantasy/Caracas Metro_files/: RotateCookiesPage.html  app.html  css2(1)  js  kh  (+78 more)
data/: Bloomberg_Rankings.xlsx  Top_Stocks.xlsx  UBI Test.xlsx  ^SOX.xlsx  bloomberg_data.xlsx  econ.db  semi.db  soxx.csv  test.xlsx  tick_data_2023-09-01_2023-09-20.csv  tickers.xlsx  unfiltered_basket.xlsx
docs/: index.html
src/: pyproject.toml
src/econ_utils/: sql_queries.py
src/scripts/: README.md  nb02.1.py  nb04.py  sql_in.py
src/semi_utils/: backtests.py  inv_theory.py  sql_queries.py
(+84 files in other folders)
