[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "econ_utils"
version = "0.0.1"
description = "econ utils"
authors = ["Daniel Halm Alvarez <Jd.w.halm-alvarez@lse.ac.uk>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
